# wickra-verify

./: .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  THREAT_MODEL.md  clippy.toml  deny.toml  lychee.toml  osv-scanner.toml  repo-metadata.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/requirements/: ci-dev.in
.github/scripts/: check-cbindgen.sh  wasm-golden-parity.mjs
.github/workflows/: bench.yml  ci.yml  codeql.yml  release.yml  scorecard.yml
bindings/c/: Cargo.toml  README.md  cbindgen.toml
bindings/c/include/: wickra_verify.h
bindings/c/src/: lib.rs
bindings/csharp/WickraVerify/: DllResolver.cs  Native.cs  README.md  Verifier.cs  WickraVerify.csproj
bindings/csharp/WickraVerify.Tests/: GoldenTests.cs  VerifierTests.cs  WickraVerify.Tests.csproj
bindings/go/: README.md  go.mod  golden_test.go  verify_test.go  wickra.go
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/org/wickra/verify/: Native.java  Verifier.java
bindings/java/src/test/java/org/wickra/verify/: GoldenTest.java  VerifierTest.java
bindings/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/node/__tests__/: completeness.test.js  golden.test.js  verify.test.js
bindings/node/npm/darwin-arm64/: package.json
bindings/node/npm/darwin-x64/: package.json
bindings/node/npm/linux-arm64-gnu/: package.json
bindings/node/npm/linux-x64-gnu/: package.json
bindings/node/npm/win32-arm64-msvc/: package.json
bindings/node/npm/win32-x64-msvc/: package.json
bindings/node/src/: lib.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/python/wickra_verify/: __init__.py  __init__.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: test_completeness.py  test_golden.py  test_smoke.py
bindings/r/: DESCRIPTION  NAMESPACE  README.md
bindings/r/R/: verify.R
bindings/r/src/: Makevars  Makevars.win  wickra_verify.c
bindings/r/tests/: run_tests.R
bindings/wasm/: Cargo.toml  README.md
bindings/wasm/src/: lib.rs
bindings/wasm/tests/: golden.test.js
crates/verify-bench/: Cargo.toml
crates/verify-bench/benches/: verify.rs
crates/verify-core/: Cargo.toml
crates/verify-core/examples/: bless_golden.rs
crates/verify-core/src/: canon.rs  claim.rs  compare.rs  config.rs  error.rs  lib.rs  tests.rs  verdict.rs  verify.rs
crates/verify-core/tests/: cli_eq_binding.rs  conformance.rs  golden.rs  proptest_invariants.rs
crates/verify-core/tests/common/: mod.rs
crates/wickra-verify-cli/: Cargo.toml
crates/wickra-verify-cli/src/: args.rs  main.rs  run.rs
docs/: ARCHITECTURE.md  CANONICALIZATION.md  CLAIM_FORMAT.md  Cookbook.md  DETERMINISM.md  VERDICT.md
examples/: README.md
examples/c/: CMakeLists.txt  verify.c  verify.cpp
examples/csharp/Verify/: Program.cs  Verify.csproj
examples/data/candles/: AAA.csv
examples/data/claims/: fudged.json
examples/go/: go.mod  verify.go
examples/java/: Verify.java
examples/node/: package.json  verify.js
examples/python/: verify.py
examples/r/: verify.R
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
examples/web/: README.md  app.js  index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: canonicalize.rs  claim_parse.rs  compare_reports.rs  verify_roundtrip.rs
golden/: README.md
golden/claims/: fudged_drawdown.json  fudged_return.json  fudged_sharpe.json  honest.json  wrong_data.json
golden/data/: BTCUSDT.csv
golden/expected/: fudged_drawdown.json  fudged_return.json  fudged_sharpe.json  honest.json  wrong_data.json
