[package]
name = "wickra-verify-python"
description = "Python bindings for wickra-verify: recompute a claimed backtest report and confirm or refute it deterministically."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "_wickra_verify"
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
verify-core = { workspace = true }
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
