[package]
name = "wickra-verify-wasm"
description = "WebAssembly bindings for wickra-verify — recompute a claimed backtest report and confirm or refute it, in the browser."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

# Modern rustc emits a wasm feature set (bulk-memory, sign-ext, …) that the
# wasm-opt bundled with wasm-pack is too old to validate. The wasm-bindgen output
# is already valid and functional; skip the optional size-only optimizer pass.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lints]
workspace = true

[dependencies]
# The verify core as a direct path dep (not `workspace = true`) so
# `default-features = false` is honored — cargo silently ignores it on an
# inherited workspace dependency. The pinned backtest engine is sequential (no
# rayon), so a wasm run is byte-identical to the native one — the exact
# cross-language golden check.
verify-core = { path = "../../crates/verify-core", version = "0.1.0", default-features = false }
wasm-bindgen = "0.2"
