[package]
name = "verify-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Deterministic core of wickra-verify: recompute a claimed backtest report and confirm or refute it field by field."

[dependencies]
# The backtest engine (run + version); recompute the claimed report with it.
wickra-backtest-core.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
# The canonical verdict/inputs hash (same canonicalization as wickra-proof).
blake3.workspace = true

[dev-dependencies]
# Integration tests recompute honest reports with the real engine and drive
# property tests over random universes.
wickra-backtest-core.workspace = true
serde_json.workspace = true
proptest.workspace = true

[lints]
workspace = true
