[package]
name = "wickra-verify-cli"
description = "Reference command-line verifier over verify-core: recompute a claimed backtest report and confirm or refute it, exiting non-zero on a refuted claim for use in CI pipelines."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lints]
workspace = true

[[bin]]
name = "wickra-verify"
path = "src/main.rs"

[dependencies]
# The deterministic verify core.
verify-core.workspace = true
serde_json.workspace = true
clap.workspace = true
